cabal-version:       >=1.10
name:                ProbProg
version:             0.1.0.0
synopsis:            
description:         
license:             GPL3
license-file:        LICENSE
author:              Jean-Phlippe Bernardy
maintainer:          
copyright:           2021
build-type:          Simple

library 
  exposed-modules: Boolean
                 , Exact
                 , Gibbs
                 , Histograms
                 , Logits
                 , PreciseProb
                 , ProbLang
  hs-source-dirs: src
  build-depends: base
               , containers
               , gasp
               , logict
               , MissingH
               , mtl
               , mwc-random
               , pretty
               , statistics
  default-language: Haskell2010
